--- a/css/style.css
+++ b/css/style.css
@@ -5,17 +5,26 @@
 
 .fake-img-1
 {
+  height: 150px;
   background-color:rgb(201, 67, 37);
 }
 .fake-img-2
 {
+  height: 150px;
   background-color:rgb(26, 108, 138);
 }
 .fake-img-3
 {
+  height: 150px;
   background-color:rgb(52, 139, 53);
 }
 .fake-img-4
 {
+  height: 150px;
   background-color:rgb(23, 40, 149);
+}
+
+#filtres .accordion
+{
+  border-top: 1px solid rgb(170, 170, 170);
 }
